--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "homepage": "https://github.com/lanastasov/Ecommerce-Eshop-MERN#readme",
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "mongoose": "^5.10.6"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
