--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "express": "^4.17.2",
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.6"
+    "mongoose": "^5.10.6",
+    "multer": "^1.4.4"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
